[gd_scene load_steps=2 format=2]

[ext_resource path="res://menus/video.gd" type="Script" id=1]

[node name="Video" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 1248.0
margin_bottom = 568.0
custom_constants/separation = 16

[node name="Fullscreen" type="CheckButton" parent="MarginContainer/VBoxContainer"]
margin_left = 535.0
margin_right = 681.0
margin_bottom = 40.0
size_flags_horizontal = 4
text = "Fullscreen"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 1216.0
margin_bottom = 60.0

[node name="QualitySliders" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 1216.0
margin_bottom = 110.0
custom_constants/separation = 16

[node name="RenderScale" type="VBoxContainer" parent="MarginContainer/VBoxContainer/QualitySliders"]
margin_right = 590.0
margin_bottom = 34.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/QualitySliders/RenderScale"]
margin_right = 590.0
margin_bottom = 14.0
text = "Render Scale"
align = 1

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer/QualitySliders/RenderScale"]
margin_top = 18.0
margin_right = 590.0
margin_bottom = 34.0

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/QualitySliders"]
margin_left = 606.0
margin_right = 610.0
margin_bottom = 34.0

[node name="ShadowQuality" type="VBoxContainer" parent="MarginContainer/VBoxContainer/QualitySliders"]
margin_left = 626.0
margin_right = 1216.0
margin_bottom = 34.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/QualitySliders/ShadowQuality"]
margin_right = 590.0
margin_bottom = 14.0
text = "Shadow Quality"
align = 1

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer/QualitySliders/ShadowQuality"]
margin_top = 18.0
margin_right = 590.0
margin_bottom = 34.0

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 126.0
margin_right = 1216.0
margin_bottom = 130.0

[node name="DisableDistortion" type="CheckButton" parent="MarginContainer/VBoxContainer"]
margin_left = 463.0
margin_top = 146.0
margin_right = 752.0
margin_bottom = 186.0
size_flags_horizontal = 4
text = "Disable Screen Distortion Effects"

[node name="DebugTrails" type="CheckButton" parent="MarginContainer/VBoxContainer"]
margin_left = 510.0
margin_top = 202.0
margin_right = 706.0
margin_bottom = 242.0
size_flags_horizontal = 4
text = "Show Debug Trails"

[node name="BackButton" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 258.0
margin_right = 1216.0
margin_bottom = 278.0

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer/BackButton"]
margin_right = 42.0
margin_bottom = 20.0
text = "Back"
